--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 			 			<div class="modal-body">
 			 				<h1 style="font-size: 20px;font-weight: bold;color: orange;">Conqueror Path</h1>
 			 				<p>Conqueror > Triumph > Legend: Alacrity > Last Stand</p>
-			 				<p>Taste of Blood > Ravenous Hunter</p>
+			 				<p>Sudden Impact > Ravenous Hunter</p>
 			 				<h1 style="font-size: 20px;font-weight: bold;color: lime;">Grasp Path</h1>
 			 				<p>Grasp > Demolish > Conditioning > Overgrowth/Unflinching</p>
 			 				<p>Taste of Blood > Ravenous Hunter</p>
